I put my name on it and then stated my favorite food

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome Path To College students!</h1>
-</body>
+    <h1>My name is Azriella</h1>
+</body>My favorite food is Tacos
 </html>
